--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-svg": "^4.0.17",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
