--- a/package.json
+++ b/package.json
@@ -57,10 +57,15 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "mock-local-storage": "^1.0.5",
     "node-sass": "^4.9.0",
+    "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^7.0.3"
   },
   "jest": {
+    "setupTestFrameworkScriptFile": "mock-local-storage",
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}"
     ],
