--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mock-local-storage": "^1.0.5",
     "node-sass": "^4.9.0",
     "react-addons-test-utils": "^15.6.2",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.0.3"
   },
   "jest": {
