--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^6.5.0",
+    "jest-fetch-mock": "^1.6.5",
     "mock-local-storage": "^1.0.5",
     "node-sass": "^4.9.0",
     "react-addons-test-utils": "^15.6.2",
