--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "react-router-dom": "^4.3.1",
     "react-svg": "^4.0.17",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-seamless-immutable": "^0.4.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "resolve": "1.6.0",
+    "seamless-immutable": "^7.1.3",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
